--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.1",
     "pdf-creator-node": "^2.3.5"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
