--- a/package.json
+++ b/package.json
@@ -23,9 +23,7 @@
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.1",
-    "pdf-creator-node": "^2.3.5"
-  },
-  "devDependencies": {
+    "pdf-creator-node": "^2.3.5",
     "nodemon": "^3.0.1"
   }
 }
